--- a/test_thu/web/index.html
+++ b/test_thu/web/index.html
@@ -11,5 +11,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
     </head>
     <body>
         <div>TODO write content</div>
+         <form action="register" method="post">
+            Student Code: <input type="text" name="code" />
+            <br>
+            Student Name: <input type="text" name="name">
+            <br>
+            Dob: <input type="date" name="dob">
+            <br>
+            <input type="submit" value="Send" />
+        </form>
     </body>
 </html>
